--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ {}",
-    "create-local": "graph create --node http://localhost:8020/ perrorone/nftself",
-    "remove-local": "graph remove --node http://localhost:8020/ perrorone/nftself",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 {}"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/",
+    "create-local": "graph create --node http://localhost:8020/",
+    "remove-local": "graph remove --node http://localhost:8020/",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.19.0",
